--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,13 +1,13 @@
 <!doctype html>
-<title>Login Demo</title>
+<title>Moody</title>
 <link rel=stylesheet type=text/css href="{{ url_for('static', filename='style.css') }}">
 <div class=page>
-  <h1>Login Demo</h1>
+  <h1>Moody</h1>
   <div class=metanav>
   {% if current_user.is_authenticated() %}
     Welcome, {{ current_user.name }} | <a href="{{ url_for('logout') }}">log out</a>
   {% else %}
-    You are not logged in | <a href="{{ url_for('login') }}">log in</a>
+    You are not logged in | <a href="{{ url_for('register') }}">sign up</a> or <a href="{{ url_for('login') }}">log in</a>
   {% endif %}
   </div>
   {% for message in get_flashed_messages() %}
