--- a/templates/register.html
+++ b/templates/register.html
@@ -1,16 +1,16 @@
 {% extends "layout.html" %}
 
 {% block body %}
-  <h2>Login</h2>
+  <h2>Register</h2>
   <form action="" method=post>
     <dl>
       <dt>Username:
       <dd><input type=text name=username>
       <dt>Password:
       <dd><input type=password name=password>
-      <dt>Remember Me:
-      <dd><input type=checkbox name=remember value=yes>
-      <dd><input type=submit value=Login>
+      <dt>Confirm Password:
+      <dd><input type=password name=repassword>
+      <dd><input type=submit value=Register>
     </dl>
   </form>
 {% endblock %}
